samples/_failures_safe/1761511325_31937f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2916fbc.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_b2916fbc.c:180:13: error: expected expression at end of input
  180 |             printf("Vertex %d: %d\n",
      |             ^~~~~~
./samples/SAFE/__tmp_b2916fbc.c:180:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2916fbc.c:180:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2916fbc.c:180:13: error: expected declaration or statement at end of input
